--- a/3 - Workbook - Feature Engineering.ipynb
+++ b/3 - Workbook - Feature Engineering.ipynb
@@ -823,6 +823,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -831,17 +838,357 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Wood' 'Brick' 'Other' 'Siding (Alum/Vinyl)' 'Missing' 'Metal'\n",
+      " 'Brick veneer' 'Combination']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print unique classes in exterior_walls\n",
+    "\n",
+    "print(df.exterior_walls.unique())"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tx_price</th>\n",
+       "      <th>beds</th>\n",
+       "      <th>baths</th>\n",
+       "      <th>sqft</th>\n",
+       "      <th>year_built</th>\n",
+       "      <th>lot_size</th>\n",
+       "      <th>property_type</th>\n",
+       "      <th>roof</th>\n",
+       "      <th>basement</th>\n",
+       "      <th>restaurants</th>\n",
+       "      <th>groceries</th>\n",
+       "      <th>nightlife</th>\n",
+       "      <th>cafes</th>\n",
+       "      <th>shopping</th>\n",
+       "      <th>arts_entertainment</th>\n",
+       "      <th>beauty_spas</th>\n",
+       "      <th>active_life</th>\n",
+       "      <th>median_age</th>\n",
+       "      <th>married</th>\n",
+       "      <th>college_grad</th>\n",
+       "      <th>property_tax</th>\n",
+       "      <th>insurance</th>\n",
+       "      <th>median_school</th>\n",
+       "      <th>num_schools</th>\n",
+       "      <th>tx_year</th>\n",
+       "      <th>two_and_two</th>\n",
+       "      <th>property_age</th>\n",
+       "      <th>exterior_walls_Brick</th>\n",
+       "      <th>exterior_walls_Brick veneer</th>\n",
+       "      <th>exterior_walls_Combination</th>\n",
+       "      <th>exterior_walls_Metal</th>\n",
+       "      <th>exterior_walls_Missing</th>\n",
+       "      <th>exterior_walls_Other</th>\n",
+       "      <th>exterior_walls_Siding (Alum/Vinyl)</th>\n",
+       "      <th>exterior_walls_Wood</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>295850</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>584</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Apartment / Condo / Townhouse</td>\n",
+       "      <td>Missing</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>107</td>\n",
+       "      <td>9</td>\n",
+       "      <td>30</td>\n",
+       "      <td>19</td>\n",
+       "      <td>89</td>\n",
+       "      <td>6</td>\n",
+       "      <td>47</td>\n",
+       "      <td>58</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>234.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>216500</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>612</td>\n",
+       "      <td>1965</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Apartment / Condo / Townhouse</td>\n",
+       "      <td>Composition Shingle</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>105</td>\n",
+       "      <td>15</td>\n",
+       "      <td>6</td>\n",
+       "      <td>13</td>\n",
+       "      <td>87</td>\n",
+       "      <td>2</td>\n",
+       "      <td>26</td>\n",
+       "      <td>14</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>169.0</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>0</td>\n",
+       "      <td>41</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>279900</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>615</td>\n",
+       "      <td>1963</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Apartment / Condo / Townhouse</td>\n",
+       "      <td>Missing</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>183</td>\n",
+       "      <td>13</td>\n",
+       "      <td>31</td>\n",
+       "      <td>30</td>\n",
+       "      <td>101</td>\n",
+       "      <td>10</td>\n",
+       "      <td>74</td>\n",
+       "      <td>62</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>216.0</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>0</td>\n",
+       "      <td>49</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>379900</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>618</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>33541</td>\n",
+       "      <td>Apartment / Condo / Townhouse</td>\n",
+       "      <td>Missing</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>198</td>\n",
+       "      <td>9</td>\n",
+       "      <td>38</td>\n",
+       "      <td>25</td>\n",
+       "      <td>127</td>\n",
+       "      <td>11</td>\n",
+       "      <td>72</td>\n",
+       "      <td>83</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>265.0</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>340000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>634</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Apartment / Condo / Townhouse</td>\n",
+       "      <td>Missing</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>149</td>\n",
+       "      <td>7</td>\n",
+       "      <td>22</td>\n",
+       "      <td>20</td>\n",
+       "      <td>83</td>\n",
+       "      <td>10</td>\n",
+       "      <td>50</td>\n",
+       "      <td>73</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   tx_price  beds  baths  sqft  year_built  lot_size  \\\n",
+       "0    295850     1      1   584        2013         0   \n",
+       "1    216500     1      1   612        1965         0   \n",
+       "2    279900     1      1   615        1963         0   \n",
+       "3    379900     1      1   618        2000     33541   \n",
+       "4    340000     1      1   634        1992         0   \n",
+       "\n",
+       "                   property_type                 roof  basement  restaurants  \\\n",
+       "0  Apartment / Condo / Townhouse              Missing       0.0          107   \n",
+       "1  Apartment / Condo / Townhouse  Composition Shingle       1.0          105   \n",
+       "2  Apartment / Condo / Townhouse              Missing       0.0          183   \n",
+       "3  Apartment / Condo / Townhouse              Missing       0.0          198   \n",
+       "4  Apartment / Condo / Townhouse              Missing       0.0          149   \n",
+       "\n",
+       "   groceries  nightlife  cafes  shopping  arts_entertainment  beauty_spas  \\\n",
+       "0          9         30     19        89                   6           47   \n",
+       "1         15          6     13        87                   2           26   \n",
+       "2         13         31     30       101                  10           74   \n",
+       "3          9         38     25       127                  11           72   \n",
+       "4          7         22     20        83                  10           50   \n",
+       "\n",
+       "   active_life  median_age  married  college_grad  property_tax  insurance  \\\n",
+       "0           58        33.0     65.0          84.0         234.0       81.0   \n",
+       "1           14        39.0     73.0          69.0         169.0       51.0   \n",
+       "2           62        28.0     15.0          86.0         216.0       74.0   \n",
+       "3           83        36.0     25.0          91.0         265.0       92.0   \n",
+       "4           73        37.0     20.0          75.0          88.0       30.0   \n",
+       "\n",
+       "   median_school  num_schools  tx_year  two_and_two  property_age  \\\n",
+       "0            9.0          3.0     2013            0             0   \n",
+       "1            3.0          3.0     2006            0            41   \n",
+       "2            8.0          3.0     2012            0            49   \n",
+       "3            9.0          3.0     2005            0             5   \n",
+       "4            9.0          3.0     2002            0            10   \n",
+       "\n",
+       "   exterior_walls_Brick  exterior_walls_Brick veneer  \\\n",
+       "0                     0                            0   \n",
+       "1                     1                            0   \n",
+       "2                     0                            0   \n",
+       "3                     0                            0   \n",
+       "4                     1                            0   \n",
+       "\n",
+       "   exterior_walls_Combination  exterior_walls_Metal  exterior_walls_Missing  \\\n",
+       "0                           0                     0                       0   \n",
+       "1                           0                     0                       0   \n",
+       "2                           0                     0                       0   \n",
+       "3                           0                     0                       0   \n",
+       "4                           0                     0                       0   \n",
+       "\n",
+       "   exterior_walls_Other  exterior_walls_Siding (Alum/Vinyl)  \\\n",
+       "0                     0                                   0   \n",
+       "1                     0                                   0   \n",
+       "2                     0                                   0   \n",
+       "3                     0                                   0   \n",
+       "4                     0                                   0   \n",
+       "\n",
+       "   exterior_walls_Wood  \n",
+       "0                    1  \n",
+       "1                    0  \n",
+       "2                    1  \n",
+       "3                    1  \n",
+       "4                    0  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create dummy variables for exterior walls and display first 5 observations\n",
+    "\n",
+    "pd.get_dummies(df, columns=['exterior_walls']).head()\n"
+   ]
   },
   {
    "cell_type": "code",
