--- a/4 - Workbook - Regression Algorithms.ipynb
+++ b/4 - Workbook - Regression Algorithms.ipynb
@@ -3314,10 +3314,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.        , -0.        , -0.        , -0.        ,  0.        ,\n",
+       "       -0.        , -0.        ,  0.        ,  0.00614842, -0.        ,\n",
+       "       -0.        ,  0.        ,  0.        , -0.        , -0.        ,\n",
+       "        0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "        0.        , -0.        , -0.        ,  0.        , -0.        ,\n",
+       "        0.        , -0.        ,  0.        , -0.        ,  0.        ,\n",
+       "       -0.        ,  0.        ,  0.        ,  0.        , -0.        ,\n",
+       "       -0.        , -0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "       -0.00326944, -0.        ,  0.        , -0.        , -0.        ,\n",
+       "        0.        , -0.        ,  0.        , -0.        ,  0.        ,\n",
+       "        0.        ,  0.        , -0.        , -0.        , -0.        ,\n",
+       "        0.        , -0.00378286,  0.        ,  0.        ,  0.        ,\n",
+       "        0.        , -0.        , -0.        , -0.        , -0.        ,\n",
+       "       -0.        ,  0.        ,  0.        , -0.        , -0.00659173,\n",
+       "        0.        ,  0.        ,  0.        , -0.        , -0.        ,\n",
+       "       -0.        , -0.        ,  0.        ,  0.        , -0.        ,\n",
+       "        0.        ,  0.        ,  0.        ,  0.        , -0.        ,\n",
+       "        0.        , -0.        , -0.        ,  0.        , -0.        ,\n",
+       "        0.        , -0.        , -0.        , -0.        ,  0.        ,\n",
+       "        0.00450968,  0.        , -0.        ,  0.        , -0.        ])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "elastic2.coef_"
+   ]
   },
   {
    "cell_type": "markdown",
